# spqrel_navigation

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  qiproject.xml
maps/: DISB1.yaml  INB1004-wed.pgm  INB1004-wed.yaml  diag.yaml  dis.yaml  dis_corridor.yaml  dis_corridor_short.yaml  robolabINB1004.pgm  robolabINB1004.yaml
maps/nagoya/: dummy.pgm  dummy.tpg  dummy.yaml  nagoya_gmapping.pgm  nagoya_gmapping.yaml  nagoya_srrg_mapper.pgm  nagoya_srrg_mapper.yaml
naoqi/: CMakeLists.txt
naoqi/naoqi_localizer/: CMakeLists.txt  naoqi_localizer.cpp  naoqi_localizer.h  pepper_localizer.cpp
naoqi/naoqi_navigation_gui/: CMakeLists.txt  naoqi_navigation_gui.cpp  naoqi_navigation_gui.h  pepper_navigation_gui.cpp
naoqi/naoqi_planner/: CMakeLists.txt  dynamic_map.cpp  dynamic_map.h  naoqi_planner.cpp  naoqi_planner.h  naoqi_planner_gui.cpp  naoqi_planner_gui.h  naoqi_planner_new.cpp  naoqi_planner_new.h  pepper_planner.cpp  pepper_planner_gui.cpp  pepper_planner_new.cpp
naoqi/naoqi_sensor_utils/: CMakeLists.txt  naoqi_sensor_utils.cpp  naoqi_sensor_utils.h
ros/launch/: spqrel_navigation.launch
ros/ros_planner/: CMakeLists.txt  package.xml
ros/ros_planner/src/: ros_planner.cpp  ros_planner.h  ros_planner_node.cpp
ros/spqrel_planner/: CMakeLists.txt
ros/spqrel_planner/src/: dynamic_map.cpp  dynamic_map.h  planner.cpp  planner.h  ros_planner.cpp  ros_planner.h  ros_planner_new.cpp  ros_planner_new.h  ros_planner_node.cpp  ros_planner_node_new.cpp
ros/spqrel_planner/src/OLD/: planner.h  ros_planner.h  ros_planner_node.cpp
ros/srrg_localizer2d_ros/: CMakeLists.txt  package.xml
ros/srrg_localizer2d_ros/msg/: LocalizerRanges.msg
ros/srrg_localizer2d_ros/src/: ros_localizer.cpp  ros_localizer.h  srrg_localizer2d_node.cpp
ros/srrg_ros_wrappers/: image_message_listener.cpp  image_message_listener.h  imu_interpolator.cpp  imu_interpolator.h  imu_message_listener.cpp  imu_message_listener.h  joint_state_message_listener.cpp  joint_state_message_listener.h  laser_message_listener.cpp  laser_message_listener.h  multiecholaser_message_listener.cpp  multiecholaser_message_listener.h  odom_tf_publisher.cpp  odom_tf_publisher.h  ros_utils.cpp  ros_utils.h  spherical_image_message_listener.cpp  spherical_image_message_listener.h
scripts/: launch_all.sh  launch_d2l.sh  launch_localizer.sh  launch_planner.sh  upload.sh  write_pose.py
src/: CMakeLists.txt
src/naoqi_localizer/: CMakeLists.txt  naoqi_localizer.cpp  naoqi_localizer.h  pepper_localizer.cpp
src/naoqi_planner/: CMakeLists.txt  dynamic_map.cpp  dynamic_map.h  naoqi_planner.cpp  naoqi_planner.h  naoqi_planner_gui.h  pepper_planner.cpp  pepper_planner_gui.cpp
src/naoqi_sensor_utils/: CMakeLists.txt  naoqi_sensor_utils.cpp  naoqi_sensor_utils.h
src/srrg_localizer2d/: CMakeLists.txt  localization_filter.cpp  localization_filter.h  localizer_test.cpp
src/srrg_path_map/: CMakeLists.txt  base_path_search.cpp  base_path_search.h  dijkstra_path_search.cpp  dijkstra_path_search.h  dijkstra_test.cpp  distance_map_path_search.cpp  distance_map_path_search.h  distance_map_test.cpp  path_map.cpp  path_map.h  path_map_utils.cpp  path_map_utils.h
src/srrg_planner2d/: dynamic_map.cpp  dynamic_map.h  motion_controller.cpp  motion_controller.h  planner.cpp  planner.h
src/srrg_system_utils/: CMakeLists.txt  stream_helpers.h  system_utils.cpp  system_utils.h
src/srrg_types/: types.hpp  vector_2d.h  vector_2d.hpp
src/topological_navigation/: setup.py
src/topological_navigation/msgs/: nodeMsg.yaml
src/topological_navigation/scripts/: INB3123.tpg  event_listen.py  get_route.py  map_editor.py  nav_client.py  route_search.py  stresstest.py  test_planner.py  topological_localisation.py  topological_map.py  topological_navigation.py  topological_node.py
src/topological_navigation/src/: topological_map.py
src/topological_navigation/support/: INB3123.tpg
src/yaml_parser/: CMakeLists.txt  simple_yaml_parser.cpp  simple_yaml_parser.h
